[package]
name = "todo"
version = "0.1.0"
edition = "2021"
about = "Simple CLI todo app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.12", features = ["derive"] }
serde = { version = "1.0.135", features = ["derive"] }
